Add send update notification processor
